# db-operator

./: .containerignore  .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Dockerfile  Makefile  PROJECT  README.md  TODO.md  Taskfile.yml  dbin.bak  docker-compose.yml  go.mod  go.sum  go.work.sum  helmfile.yaml.gotmpl  kind-config.yaml  main.go  renovate.json  roadmap.md
.github/: FUNDING.yml  conventional_commit_comment.md
.github/workflows/: build-and-test.yaml  check-conventional-commits.yaml  comment-pr.yaml  docs-publish.yaml  go-database-integration-tests.yaml  go-quick-tests.yaml  helm-integration-tests.yaml  image-publish.yaml  (+14 more)
ci/: helmfile.yaml.gotmpl
cmd/: main.go
controllers/: database_controller.go  database_helper.go  database_helper_test.go  dbinstance_controller.go  dbuser_controller.go
docs/: creatingdatabases.md  creatinginstances.md  creatingusers.md  dbinstances.md  enablingbackup.md  howitworks.md  usermanagement.md
documentation/: README.md  pyproject.toml  zensical.toml
documentation/docs/: backups.md  database.md  dbinstances.md  dbuser.md  index.md  templates.md
documentation/docs/development/: database_test.md  e2e_test.md
examples/: db.yaml  instance-cloudsql.yaml  instance-generic.yaml
helmfiles/: cert-manager.yaml  helmfile.yaml.gotmpl
scripts/: cleanup_dev_registry  regenerate_kustomizations  regenerate_kustomizations.ash  set_image_metadata  test_database
templates/: pod.gotmpl  role.gotmpl  role_binding.gotmpl  secret.gotmpl  service_account.gotmpl
test/: go.mod  go.sum
(+338 files in other folders)
