[project]
name = "docs"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Rodionov",email = "iam@allanger.xyz"}
]
requires-python = ">=3.12"
dependencies = [
    "zensical (>=0.0.31,<0.0.32)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
